package com.example;

public interface Icandidate {
    public Patient getPatient();
    public Heart getHeart();
}
